--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "AQUA DATA",
-  "name": "Gerenciamento da Produção Aquícola",
+  "name": "AQUA DATA Gerenciamento Aquícola",
   "icons": [
     {
       "src": "favicon.ico",
