--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
@@ -57,6 +57,8 @@
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "gh-pages": "^6.1.1",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "react-app-rewired": "^2.2.1",
+    "workbox-webpack-plugin": "^7.1.0"
   }
 }
