--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "customize-cra": "^1.0.0",
     "gh-pages": "^6.1.1",
     "jest": "^29.7.0",
     "react-app-rewired": "^2.2.1",
