--- a/backend/Src/Infra/EF/Aquadata.Infra.EF.csproj
+++ b/backend/Src/Infra/EF/Aquadata.Infra.EF.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Core\Aquadata.Core.csproj" />
+    <ProjectReference Include="..\..\Application\Aquadata.Application.csproj" />
   </ItemGroup>
 
 </Project>
