--- a/backend/Src/Api/Aquadata.Api.csproj
+++ b/backend/Src/Api/Aquadata.Api.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.4.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
@@ -18,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\Application\Aquadata.Application.csproj" />
     <ProjectReference Include="..\Infra\EF\Aquadata.Infra.EF.csproj" />
+    <ProjectReference Include="..\Infra\Security\Aquadata.Infra.Security.csproj" />
   </ItemGroup>
 
 </Project>
