--- a/backend/Src/Api/appsettings.Development.json
+++ b/backend/Src/Api/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=3306;Database=aquadata;Uid=root;Pwd=aquadata@"
+    "DefaultConnection": "Server=localhost;Port=3306;Database=root;Uid=root;Pwd=aquadata@"
   }
 }
