--- a/backend/Src/Infra/Security/Aquadata.Infra.Security.csproj
+++ b/backend/Src/Infra/Security/Aquadata.Infra.Security.csproj
@@ -6,6 +6,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.3.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
   </ItemGroup>
 
