--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@capacitor-community/sqlite": "^7.0.0",
+    "@capacitor/core": "^7.1.0",
     "@fortawesome/fontawesome-free": "^6.5.2",
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
@@ -53,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "@capacitor/cli": "^7.1.0",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
