--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mercadopago/sdk-react": "^1.0.2",
     "capacitor-secure-storage-plugin": "0.11.0",
     "chart.js": "^4.4.8",
     "events": "^3.3.0",
