feat: adiciona endpoint para webHook

--- a/backend/Src/Infra/Payments/MercadoPago/Aquadata.Infra.Payments.MercadoPago.csproj
+++ b/backend/Src/Infra/Payments/MercadoPago/Aquadata.Infra.Payments.MercadoPago.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\Application\Aquadata.Application.csproj" />
+    <ProjectReference Include="..\..\..\Core\Aquadata.Core.csproj" />
   </ItemGroup>
 
 </Project>
