feat: inicia pagamentos usando cardBrick

--- a/backend/Src/Api/appsettings.Development.json
+++ b/backend/Src/Api/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=33060;Database=aquadata;Uid=root;Pwd=aquadata@"
+    "DefaultConnection": "Server=localhost;Port=33060;Database=aquadata;Uid=root;Pwd=aquadata@;Allow User Variables=true;"
   },
   "MercadoPago": {
     "AccessToken": "TEST-5321794830965685-040314-9bf687d49772dbdb211b323504d742f7-205330802",
