--- a/backend/Src/Infra/Payments/MercadoPago/Aquadata.Infra.Payments.MercadoPago.csproj
+++ b/backend/Src/Infra/Payments/MercadoPago/Aquadata.Infra.Payments.MercadoPago.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Hangfire" Version="1.8.18" />
+    <PackageReference Include="Hangfire.AspNetCore" Version="1.8.18" />
+    <PackageReference Include="Hangfire.MySqlStorage" Version="2.0.3" />
     <PackageReference Include="mercadopago-sdk" Version="2.5.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0-preview.2.25163.2" />
   </ItemGroup>
