feat: adiciona pagamentos usando assinatura

--- a/frontend/capacitor.config.json
+++ b/frontend/capacitor.config.json
@@ -2,7 +2,7 @@
   "appId": "com.aquadata.app",
   "appName": "aquadata",
   "webDir": "dist",
-  "server": {
-    "androidScheme": "https"
+  "server": { 
+    "androidScheme": "http"
   }
 }
