--- a/backend/Src/Infra/Couchdb/Aquadata.Infra.CouchDb.csproj
+++ b/backend/Src/Infra/Couchdb/Aquadata.Infra.CouchDb.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\..\Application\Aquadata.Application.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="10.0.0-preview.3.25171.5" />
+  </ItemGroup>
+
 </Project>
