--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@capacitor-community/sqlite": "^7.0.0",
     "@capacitor/android": "^7.1.0",
+    "@capacitor/browser": "^7.0.1",
     "@capacitor/cli": "^7.1.0",
     "@capacitor/core": "^7.1.0",
     "@capacitor/preferences": "^7.0.0",
@@ -20,6 +21,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mercadopago/sdk-js": "^0.0.3",
     "@mercadopago/sdk-react": "^1.0.2",
     "capacitor-secure-storage-plugin": "0.11.0",
     "chart.js": "^4.4.8",
@@ -35,7 +37,8 @@
     "react-router-dom": "^7.3.0",
     "react-webcam": "^7.2.0",
     "typeorm": "^0.3.21",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "vconsole": "^3.15.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
